@@ -1,0 +1,20 @@
+// This file was generated by the Gtk# code generator.
+// Any changes made will be lost if regenerated.
+
+namespace Gtk {
+
+	using System;
+
+	[Obsolete ("Events using this type were replaced by Gtk.Widget keybinding signal")]
+	public delegate void MoveFocusHandler(object o, MoveFocusArgs args);
+
+	[Obsolete ("Events using this type were replaced by Gtk.Widget keybinding signal")]
+	public class MoveFocusArgs : GLib.SignalArgs {
+		public Gtk.DirectionType Direction{
+			get {
+				return (Gtk.DirectionType) Args[0];
+			}
+		}
+
+	}
+}
