@@ -1,3 +1,10 @@
+2008-01-02  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/MoveFocusHandler.cs: obsolete event types.
+	* gtk/TextView.custom: obsolete move-focus signal. 
+	* gtk/Window.custom: obsolete move-focus signal. 
+	Compat fixes for removal of signals from gtk+ API. [Fixes #350770]
+
 2007-12-17  Mike Kestner  <mkestner@novell.com>
 
 	* parser/gapi_pp.pl: parse 'typedef struct\n{' properly.
